--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">SMMS</string>
+    <string name="home">Home</string>
+    <string name="settings">Settings</string>
+    <string name="travel_history">Travel History</string>
+    <string name="accident_history">Accident History</string>
+    <string name="clubs">Clubs</string>
+    <string name="logout">Logout</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
