--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">SMMS</string>
+    <string name="app_name">MOTOPOTATO</string>
     <string name="home">Home</string>
     <string name="settings">Settings</string>
     <string name="travel_history">Travel History</string>
