--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,11 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="close_nav">Close Drawer</string>
     <string name="open_nav">Open Drawer</string>
+    <string name="lastname">Lastname</string>
+    <string name="firstname">Firstname</string>
+    <string name="middlename">Middlename</string>
+    <string name="male">Male</string>
+    <string name="birth_date">Birth Date</string>
+    <string name="address">Address</string>
+    <string name="save">SAVE</string>
 </resources>
