User profile nav update

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,7 @@
     <string name="birth_date">Birth Date</string>
     <string name="address">Address</string>
     <string name="save">SAVE</string>
+    <string name="email">zainu3x007@gmail.com</string>
+    <string name="user_name">MARAON, JEROME D.</string>
+    <string name="female">Female</string>
 </resources>
