--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="email">zainu3x007@gmail.com</string>
     <string name="user_name">MARAON, JEROME D.</string>
     <string name="female">Female</string>
+    <string name="show_my_location">SHOW MY LOCATION</string>
 </resources>
