--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,19 +12,8 @@
     <string name="location_format">%1$f, %2$f</string>
     <string name="close_nav">Close Drawer</string>
     <string name="open_nav">Open Drawer</string>
-    <!-- Clubs xml -->
-    <string name="click_here_to_see_more">About</string>
-    <string name="you_ve_reached_the_next_screen">You\'ve reached the next screen!</string>
-    <string name="about_intelliboys">ABOUT INTELLIBOYS</string>
-    <string name="our_mission">OUR MISSION</string>
-    <string name="contact_us">Contact us</string>
-    <string name="about">Welcome to intelliboys, where passion for motors and the open road come together! Established in 2020, our club is a community of motor enthusiasts who share a love for everything on wheels, whether it\'s motorcycles, cars, or even off-road vehicles.</string>
-    <string name="mission">Our mission is to unite motor lovers under one banner, fostering camaraderie, safety, and adventure through organized rides. We believe in celebrating the spirit of freedom, the art of mechanics, and the joy of being on the road.</string>
-    <string name="address">Address: 123 main street city state zip</string>
-    <string name="phone">Phone: 123 456 7890</string>
-    <string name="email">Email: intelliboy@gmail.com</string>
-    <string name="joined">Join us today and become part of a family that shares your passion for motors! At intelliboys, it\'s not just about the destination—it\'s about the journey and the people you meet along the way.</string>
-    <!-- Clubs list -->
+
+<!-- Clubs list -->
 
     <string name="lastname">Lastname</string>
     <string name="firstname">Firstname</string>
@@ -37,15 +26,9 @@
     <string name="female">Female</string>
     <string name="show_my_location">SHOW MY LOCATION</string>
     <string name="button">Create</string>
-    <string name="my_clubs">MY CLUBS</string>
     <string name="member_logo">Member Logo</string>
     <string name="intelliboys_club">INTELLIBOYS CLUB</string>
     <string name="member_logo1">Member Logo1</string>
-    <string name="maddog_club">MADDOG CLUB</string>
-    <string name="member_logo2">Member Logo2</string>
-    <string name="indios_club">INDIOS CLUB</string>
-    <string name="member_logo3">Member Logo3</string>
-    <string name="royale_club">ROYALE CLUB</string>
     <string name="create">Create</string>
     <string name="enter_club_name">Enter Club Name</string>
     <string name="enter_club_theme">Enter Club Theme</string>
@@ -61,6 +44,20 @@
     <string name="status_over_speeding">Status: Over Speeding!</string>
     <string name="status_normal">Status: Normal</string>
     <string name="login">LOGIN</string>
-    <string name="forgot_password">Forgot Password</string>
+    <string name="forgot_password"><u>FORGOT PASSWORD</u></string>
+    <string name="email">email</string>
+    <string name="address">Address</string>
+    <string name="search">Search</string>
+    <string name="add_group">Add Group</string>
+    <string name="groups">Groups</string>
+    <string name="enter_club_group_name_optional">Enter Club/Group name (Optional)</string>
+    <string name="add_logo">Add logo</string>
+    <string name="add_people">Add people</string>
+    <string name="date">Date</string>
+    <string name="location">Location</string>
+    <string name="time">Time</string>
+    <string name="details">DETAILS</string>
+    <string name="speed">SPEED:</string>
+    <string name="monitor_rider">MONITOR RIDER</string>>
 
 </resources>
