--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,6 +59,7 @@
     <string name="details">DETAILS</string>
     <string name="speed">SPEED:</string>
     <string name="monitor_rider">MONITOR RIDER</string>
-    <string name="value">value</string>>
+    <string name="value">value</string>
+    <string name="start_driving">START DRIVING</string>>
 
 </resources>
