--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,7 +21,7 @@
     <string name="male">Male</string>
     <string name="birth_date">Birth Date</string>
     <string name="save">SAVE</string>
-    <string name="user_name">MARAON, JEROME D.</string>
+    <string name="user_name">Username</string>
     <string name="female">Female</string>
     <string name="show_my_location">SHOW MY LOCATION</string>
     <string name="button">Create</string>
