--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,5 +59,7 @@
     <string name="speed">SPEED:</string>
     <string name="monitor_rider">MONITOR RIDER</string>
     <string name="value">value</string>
-    <string name="start_driving">START DRIVING</string>>
+    <string name="start_driving">START DRIVING</string>
+    <string name="start_location">Start Location</string>
+    <string name="end_location">End Location</string>>
 </resources>
